[package]
name = "proptest-arbitrary-adapter"
version = "0.1.0"
authors = ["Graydon Hoare <graydon@pobox.com>", "Triton Software AG"]
edition = "2024"
description = "Make `arbitrary` interoperate with `proptest`."
documentation = "https://docs.rs/crate/proptest-arbitrary-adapter/latest"
readme = "README.md"
repository = "https://github.com/Neptune-Crypto/proptest-arbitrary-adapter"
license = "MIT OR Apache-2.0"
keywords = ["proptest", "arbitrary", "property", "fuzz", "testing"]
categories = ["development-tools::testing"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
arbitrary = "1.0.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
proptest = "1.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
proptest = { version = "1.0.0", default-features = false, features = ["std"] }
getrandom = { version = "0.3", features = ["wasm_js"] } # note: there is also a flag in .cargo/config.toml

[dev-dependencies]
arbitrary = { version = "1.0.0", features = ["derive"] }
test-strategy = "0.4"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.42"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }